--- a/entrega2/frontend/package.json
+++ b/entrega2/frontend/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.0",
     "firebase": "^12.7.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -21,6 +22,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.22.0",
     "tailwind-merge": "^2.2.1"
   },
